13-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.2.0. (Supports VAST
 login).

 * clarin-angular/src/app/components/views/login-social/:
 * clarin-angular/src/app/app-routing.module.ts:
 * clarin-angular/src/app/app.component.ts:
 * clarin-angular/src/app/app.module.ts:
 * clarin-angular/src/app/components/views/login/login.component.html:
 * clarin-angular/src/app/components/views/login/login.component.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/auth.service.ts:
 * clarin-angular/src/app/ng-matero/core/authentication/login.service.ts:
 * clarin-angular/src/assets/i18n/el-GR.json:
 * clarin-angular/src/assets/i18n/en-US.json:
 * clarin-angular/src/css/clarin-material.scss:
 * clarin-angular/src/proxy-local.conf.json:
 * clarin-angular/src/proxy.conf.json: Added support for VAST login.

 * backend-django/vast_auth2/views.py: Implemented VAST login (OAuth2).

 * backend-django/clarin_backend/views.py: Added class UserAuthenticated().

 * backend-django/clarin_backend/urls.py: Added paths 'auth/loginsocial' and 
 'api/user/authenticated'.

 * backend-django/DjangoClarin/authentication.py: Added function
 deleteJWTCookie().

05-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
 * clarin-angular/package.json: Updated version to 3.1.0.

 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/components/views/add-collection/add-collection.component.ts:
 * clarin-angular/src/app/services/document-service/document.service.ts:
 Supported images are: JPEG, PNG, GIF, TIFF, WEBP.

 * clarin-angular/src/app/components/controls/button/annotation-button/annotation-button.component.ts:
 Added support for annotating images.

 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 Added support for image annotations!
