@@ -1,12 +1,20 @@
 <page-header title="{{'pageheader.Dashboard'|translate}}"></page-header>
+<!--
+  <breadcrumb></breadcrumb>
+-->
+
+<mat-card>
+<mat-card-title>{{'dashboard.MyCollections' | translate}}</mat-card-title>
+<mat-card-subtitle>{{'dashboard.MyCollectionsInfo' | translate}}</mat-card-subtitle>
+<mat-card-content>
 <div class="matero-row" fxLayout="row wrap">
 
   <!-- Statistics -->
   <div class="matero-col" fxFlex.gt-sm="25" fxFlex.gt-xs="50" fxFlex="100"
-       *ngFor="let stat of statistics">
+       *ngFor="let stat of myStatistics">
     <mat-card [ngClass]="['text-white', stat.color]">
       <!--<mat-card-title class="f-s-12 f-w-100">{{stat.title}}</mat-card-title>-->
-      <mat-card-title class="text-center">{{stat.title}}</mat-card-title>
+      <mat-card-title class="text-center">{{stat.title | translate}}</mat-card-title>
       <mat-card-content>
         <h2 class="text-center">{{stat.amount}}</h2>
         <mtx-progress [value]="stat.progress.value"
@@ -20,3 +28,64 @@
   </div>
 
 </div>
+</mat-card-content>
+<mat-card-footer></mat-card-footer>
+</mat-card>
+
+<mat-card>
+<mat-card-title>{{'dashboard.MySharedCollections' | translate}}</mat-card-title>
+<mat-card-subtitle>{{'dashboard.MySharedCollectionsInfo' | translate}}</mat-card-subtitle>
+<mat-card-content>
+<div class="matero-row" fxLayout="row wrap">
+
+  <!-- Statistics -->
+  <div class="matero-col" fxFlex.gt-sm="25" fxFlex.gt-xs="50" fxFlex="100"
+       *ngFor="let stat of mySharedStatistics">
+    <mat-card [ngClass]="['text-white', stat.color]">
+      <!--<mat-card-title class="f-s-12 f-w-100">{{stat.title}}</mat-card-title>-->
+      <mat-card-title class="text-center">{{stat.title | translate}}</mat-card-title>
+      <mat-card-content>
+        <h2 class="text-center">{{stat.amount}}</h2>
+        <mtx-progress [value]="stat.progress.value"
+                      height="2px"
+                      foreground="rgba(255,255,255,1)"
+                      background='rgba(0,0,0,.5)'>
+        </mtx-progress>
+        <!--<small class="text-muted">Monthly</small>-->
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+</div>
+</mat-card-content>
+<mat-card-footer></mat-card-footer>
+</mat-card>
+
+<mat-card>
+<mat-card-title>{{'dashboard.MyUnsharedCollections' | translate}}</mat-card-title>
+<mat-card-subtitle>{{'dashboard.MyUnsharedCollectionsInfo' | translate}}</mat-card-subtitle>
+<mat-card-content>
+<div class="matero-row" fxLayout="row wrap">
+
+  <!-- Statistics -->
+  <div class="matero-col" fxFlex.gt-sm="25" fxFlex.gt-xs="50" fxFlex="100"
+       *ngFor="let stat of myUnsharedStatistics">
+    <mat-card [ngClass]="['text-white', stat.color]">
+      <!--<mat-card-title class="f-s-12 f-w-100">{{stat.title}}</mat-card-title>-->
+      <mat-card-title class="text-center">{{stat.title | translate}}</mat-card-title>
+      <mat-card-content>
+        <h2 class="text-center">{{stat.amount}}</h2>
+        <mtx-progress [value]="stat.progress.value"
+                      height="2px"
+                      foreground="rgba(255,255,255,1)"
+                      background='rgba(0,0,0,.5)'>
+        </mtx-progress>
+        <!--<small class="text-muted">Monthly</small>-->
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+</div>
+</mat-card-content>
+<mat-card-footer></mat-card-footer>
+</mat-card>
