@@ -1,3 +1,15 @@
+21-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
+ * clarin-angular/package.json: Updated version to 3.2.1. (More detailed
+ Dashboard).
+
+ * backend-django/clarin_backend/views.py: Added a more detailed response of
+ user statistics.
+
+ * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.html:
+ * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.component.ts:
+ * clarin-angular/src/app/ng-matero/routes/dashboard/dashboard.srevice.ts:
+ Changes to the dashboard (provides details in three groups).
+
 13-October-2022 Petasis Georgios <petasis@iit.demokritos.gr>:
  * clarin-angular/package.json: Updated version to 3.2.0. (Supports VAST
  login).
